--- a/CSS/index.css
+++ b/CSS/index.css
@@ -2,17 +2,16 @@
     padding: 0;
     margin: 0;
     border: border-box;
+    scroll-behavior: smooth;
 }
 
 .grid {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-rows: 10vh 110vh 20vh 80vh 40vh 30vh;
+    grid-template-rows: 10vh 110vh 100vh 30vh;
     grid-template-areas: "h h h h"
                          "c1 c1 c2 c2"
-                         "wm wm wm wm"
                          "m m m m"
-                         "wf wf wf wf"
                          "f f f f";
 }
 
@@ -162,17 +161,31 @@ header {
 /*----------------------------------------------------
 ---MAIN-----------------------------------------------
 ----------------------------------------------------*/
-.wave-main {
-    grid-area: wm;
-}
-.wave-main img {
-    width: 100%;
+
+.custom-shape-divider-bottom-1657897361 {
     position: relative;
-    top: -150%;
+    bottom: 350px;
+    left: 0;
+    width: 100%;
+    overflow: hidden;
+    line-height: 0;
+    transform: rotate(180deg);
 }
 
+.custom-shape-divider-bottom-1657897361 svg {
+    position: relative;
+    display: block;
+    width: calc(101% + 1.3px);
+    height: 350px;
+}
+
+.custom-shape-divider-bottom-1657897361 .shape-fill {
+    fill: #000;
+}
+
+
 .main {
-    background-color: #165690;
+    background-color: #e6e6e6;
     grid-area: m;
 }
 
@@ -180,14 +193,6 @@ header {
 /*----------------------------------------------------
 ---FOOTER---------------------------------------------
 ----------------------------------------------------*/
-.wave-footer {
-    grid-area: wf;
-    background-color: rgb(22, 86, 144);
-}
-
-.wave-footer img {
-    width: 100%;
-}
 
 footer {
     background-color: rgb(0, 0, 0);
