--- a/CSS/modal.css
+++ b/CSS/modal.css
@@ -244,8 +244,9 @@ input:-webkit-autofill {
 .modal-service .second-content span{
     position: relative;
     top: 5%;
-    display: flex;
-    flex-direction: column;
+    height: 30%;
+    left: 50%;
+    transform: translate(-50%);
 }
 
 .modal-service .second-content .classe {
@@ -254,66 +255,72 @@ input:-webkit-autofill {
     align-items: flex-start;
     position: absolute;
     top: 30%;
-    left: 10%;
+    left: 5%;
+    background-color: #fff;
+    width: 95%;
+    height: auto;
 }
 
 .modal-service .second-content .classe .trigger {
     display: flex;
     flex-direction: row;
     align-items: flex-start;
-    justify-content: space-between;
-    width: 40%;
+    width: 100%;
     font-family: sans-serif;
     font-size: 24px;
     font-weight: bold;
     cursor: pointer;
+    padding: 10px 0;
 }
 
+.modal-service .second-content .classe .trigger .angle {
+    margin: 12px 5px 0 0;
+}
+
+@keyframes upAngle {
+    from {
+        transform: rotate(0);
+    } to {
+        transform: rotate(180deg);
+    }
+}
+@keyframes downAngle {
+    from {
+        transform: rotate(180deg);
+    } to {
+        transform: rotate(0);
+    }
+}
 
 .modal-service .second-content .classe .service-list {
     position: relative;
-    top: 25%;
-    left: 50%;
-    transform: translate(-50%);
+    top: 5%;
+    display: flex;
     flex-flow: row wrap;
-    justify-content: space-between;
+    justify-content: flex-start;
     align-content: space-between;
+    width: 100%;
+    height: 0;
+    overflow: hidden;
 }
-
-.modal-service .second-content .classe.show .service-list {
-    animation: useList 0.3s;
-    width: 300px;
-    height: 200px;
-}
-.modal-service .second-content .classe.hidden .service-list {
-    animation: hiddenList 0.3s;
-    width: 300px;
-    height: 0px;
-}
-
 @keyframes useList {
     from {
-        width: 300px;
-        height: 0;
+        max-height: 0px;
     } to {
-        width: 300px;
-        height: 200px;
+        max-height: 150px;;
     }
 }
 @keyframes hiddenList {
     from {
-        width: 300px;
-        height: 200px;
+        max-height: 150px;
     } to {
-        width: 300px;
-        height: 0px;
+        max-height: 0px;
     }
 }
 
 .modal-service .second-content .service-list .item-list {
-    background-color: #fff;
+    background-color: #EBEBEB;
     color: #000;
-    position: relative;
     height: 50px;
     width: 150px;
     border-radius: 12px;
@@ -331,9 +338,8 @@ input:-webkit-autofill {
 
 .modal-service .second-content .service-list input[type=radio]:checked  + label {
     box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.5);
-    background-image: linear-gradient(to bottom right, rgb(199, 139, 9) 0%, rgb(240, 179, 48) 30%, rgb(163, 113, 6) 100%);
+    background-color: #165690;
     color: #fff;
-    transform: scale(110%);
 }
 
 .modal-service .second-content .service-list input[type=radio]:active  + label {
@@ -351,8 +357,7 @@ input:-webkit-autofill {
 .modal-service .second-content  {
     height: 100%;
     display: flex;
-    flex-direction: column;
-    align-items: center;
+    overflow: auto;
 }
 
 /*----------------------------------------------------
