--- a/CSS/index.css
+++ b/CSS/index.css
@@ -7,12 +7,13 @@
 
 .grid {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-    grid-template-rows: 10vh 110vh 100vh 30vh;
-    grid-template-areas: "h h h h"
-                         "c1 c1 c2 c2"
-                         "m m m m"
-                         "f f f f";
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 65vh 65vh 65vh 100vh 30vh;
+    grid-template-areas: "lp lp"
+                        "ot ot"
+                        "ot ot"
+                         "m m"
+                         "f f";
 }
 
 h2 {
@@ -25,85 +26,120 @@ p {
 /*--------------------------------------------------
 ---HEADER-------------------------------------------
 ----------------------------------------------------*/
+#landing-page {
+    grid-area: lp;
+    background-image: linear-gradient(to bottom right, #5a1033 0%, #86174b 60%);
+}
 header {
-    background-color: #fff;
-    grid-area: h;
+    position: relative;
+    left: 50%;
+    transform: translate(-50%);
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    width: 60%;
+    min-width: 1000px;
+    height: 13%;
+    min-height: 13%;
+    color: #fff;
+}
+#logo {
     display: flex;
     align-items: center;
-    justify-content: space-around;
-    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5);
+    font-size: 22px;
 }
-.logo {
-    display: flex;
-    align-items: center;
-}
-.img {
-    width: 55px;
+#logo img {
     height: 55px;
-    background-image: linear-gradient(to bottom right, rgb(22, 86, 144) 20%, rgb(0, 0, 0) 95%);
-    margin: 15px;
+    width: 55px;
+    transform: rotate(-20deg);
 }
-.nav {
-    display: flex;
-    align-items: center;
+
+#nav-bar {
+    display: inline-flex;
+    justify-content: space-between;
+    width: 30%;
 }
-.nav hr {
-    width: 1px;
-    height: 30px;
-    background-color: #000;
-}
-.nav .nav-btn {
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 20px;
-    font-weight: 550;
-    margin: 5px;
-    border-radius: 20px;
-    padding: 7px 12px;
-    transition: 0.3s;
-    border: none;
-    background-color: #fff;
-}
-.nav .nav-btn:hover {
+
+
+#nav-bar h3,
+#nav-bar a {
     cursor: pointer;
-    color: rgba(22, 86, 144, 1);
+    text-decoration: none;
+    color: #fff;
+    font-size: 22px;
+    font-family: 'Questrial', sans-serif;
 }
-.nav .nav-btn:active {
-    background-color: rgb(243, 243, 243);
+#nav-bar h3:hover {
+    text-decoration: underline;
 }
-.user {
-    width: 55px;
-    height: 55px;
-    border-radius: 50%;
-    background-color: rgb(0, 0, 0);
-    margin: 15px;
+header .btn {
+    color: #000;
+    background-color: #fff;
+    width: 10%;
+    box-shadow: 5px 5px 8px rgba(0, 0, 0, 0.5);
+    transition: 0.2s;
+}
+
+header .btn:hover {
+    color: #86174b;
 }
 /*----------------------------------------------------
----CONTAINER 1-----------------------------------------
+---CONTENT--------------------------------------------
 ----------------------------------------------------*/
-.container-1 {
-    grid-area: c1;
-    
+#content {
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 8%;
+    width: 350px;
+    color: #fff;
 }
-.container-1 .content {
-    width: 50%;
-    height: auto;
-    position: relative;
-    margin-top: 40%;
-    left: 55%;
-    transform: translate(-50%, -50%);
-    display: block;
+
+#content h1 {
+    font-family: 'Koulen', sans-serif;
+    font-weight: 800;
+    font-size: 46px;
+}
+#content p {
+    margin: 15px;
+    font-size: 20px;
     text-align: center;
 }
-.container-1 h1 {
-    font-family: Arial, Helvetica, sans-serif;
+
+#content .btn {
+    color: #000;
+    background-color: #fff;
+    box-shadow: 5px 5px 8px rgba(0, 0, 0, 0.5);
+    transition: 0.2s;
+}
+#content .btn:hover {
+    color: #86174b;
+}
+#content .icon {
+    margin: 10px
+}
+/*----------------------------------------------------
+---OUR TEAM-------------------------------------------
+----------------------------------------------------*/
+#our-team {
+    grid-area: ot;
+    
+}
+
+#our-team h1 {
+    font-family: 'Koulen', sans-serif;
     font-weight: 800;
-    font-size: 45px;
-    margin: 3vh;
+    font-size: 32px;
 }
-.container-1 p {
-    font-family: Arial, Helvetica, sans-serif;
-    margin: 3vh;
-}
+/*----------------------------------------------------
+---OUR SERVICE----------------------------------------
+----------------------------------------------------*/
+
+
 /*----------------------------------------------------
 ---BOTÃO----------------------------------------------
 ----------------------------------------------------*/
@@ -113,7 +149,7 @@ header {
     border-radius: 20px;
     border: none;
     box-shadow: 0.2vh 0.2vw 10px rgba(0, 0, 0, 0.5);
-    background-color: rgba(22, 86, 144, 1);
+    background-color: #86174b;
     color: #fff;
     font-family: 'Questrial', sans-serif;
     font-size: 2.5vh;
@@ -124,7 +160,7 @@ header {
 }
 .btn:hover {
     background-color: #fff;
-    color: rgba(22, 86, 144, 1);
+    color: #86174b;
 }
 .btn:active {
     transform: translate(2px, 2px);
